# llm_visual_doc_reader

./: README.md  doc_understanding.py  google_vision_client.py  hello.py  pyproject.toml  server.py
prompts/: receipt_understanding_system_prompt.txt
