[project]
name = "llm-visual-doc-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.12",
    "flask>=3.1.0",
    "google-cloud>=0.34.0",
    "google-cloud-vision>=3.9.0",
    "openai>=1.61.1",
    "pillow>=11.1.0",
    "uvicorn>=0.34.0",
]
